Image overlapping issue fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -14,3 +14,7 @@ body
     height: 100vh;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+img {
+    width: 100%;
+}
